--- a/src/components/textStagger.css
+++ b/src/components/textStagger.css
@@ -1,6 +1,19 @@
+.words_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  height: 100vh;
+}
+
 .word_container {
   display: flex;
   cursor: default;
+  color: #252525;
+  font-size: 4rem;
+  font-family: 'Anton', sans-serif;
+  text-transform: uppercase;
   /* mostrar border y comentar overflow para test */
   /* border: 1px solid #c01717; */
   overflow: hidden;
@@ -9,6 +22,9 @@
 .text_rolling {
   display: flex;
   flex-direction: column;
+  /* altura del contenedor de cada palabra */
+  height: 65px;
+  line-height: 65px;
   white-space: pre;
   transition: transform 0.3s ease-in-out;
 }
